# RAG_bible_QA_v1

./: Makefile  README.md  pyproject.toml
