[tool.poetry]
name = "rag-bible-qa-v1"
version = "0.1.0"
description = ""
authors = ["vip30service123 <thaingominh2652000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
flask = "~3.0"
llama-index = "~0.10"
llama-index-llms-huggingface = "~0.2"
python = "^3.10"
scrapy = "~2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
